--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -6,5 +6,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - run: ls -l # Liste les fichier du répertoire courant
+      - run: |
+          sudo apt-get update
+          sudo apt-get install -y cowsay
       - run: cat README.txt | cowsay # Affiche le contenu du fichier `README.md` à la base du dépôt
