--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -15,4 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v2
+      with:
+        distribution: 'zulu' # See 'Supported distributions' for available options
+        java-version: '11'
+    - run: java -cp java HelloWorldApp
     - run: java -version
