fix effective-pom in workflow

--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -20,4 +20,4 @@ jobs:
         java-version: '11'
     - run: java -version
     - run: mvn -v
-    - run: mvn effective:pom
+    - run: mvn help:effective-pom
