--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     # Lance le job release si build et test se sont terminés normalement.
     needs: build
     # Lance le job release uniquement si la branche est main.
-    if: contains(github.ref, 'ref/tags/v')
+    if: contains(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/download-artifact@v2
         with:
