--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: menu-server
+          path: ./target/menu-server.jar
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -45,5 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./target/menu-server.jar
           asset_name: menu-server.jar
           asset_content_type: application/jar
